tests/good/good003.lat
int main() {
    int x = 1;
    if (x < 42) {
        return 42;
    }
}