tests/bad/bad28.lat
class A extends B {}
class B extends A {}

class C extends D {}
class D extends C {}

class E {}

int main() { return 42; }